css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
}

body {
  background-color: black;
}

h1,
h2,
h3,
h4,
h5,
p,
li,
figcaption {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 22px;
  color: seashell;
  opacity: 0.9;
}

.border {
  border: 2px solid seashell;
}

/*Navigation Bar Section*/

.container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 69px;
  width: 1240px;
  border-bottom: 1px solid seashell;
}

.logo img {
  height: 50px;
  margin-left: 10px;
}

.nav-bar ul {
  display: flex;
  margin-right: 10px;
}

.nav-bar li {
  margin-left: 30px;
  text-decoration: underline;
}

/*Missinon section*/

.mission {
  width: 1200px;
  height: 700px;
  display: flex;
  align-items: center;
  margin: 0 20px;
  background-image: url("/images/img-mission-background.webp");
}

.mission-paragragh {
  background-color: black;
  width: 100%;
  height: 100px;
}

.mission-paragragh h2,
h4 {
  text-align: center;
  margin-top: 20px;
}

/*Galery section*/

.galery {
  width: 1000px;
  margin-left: 120px;
  margin-top: 50px;
  border: 2px solid seashell;
}

.galery-images {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-end;
}

figure img {
  height: 200px;
  width: 300px;
}

figure figcaption {
  text-align: center;
}

/*Location Section*/

.location {
  height: 500px;
  width: 1200px;
  margin-left: 20px;
  background-image: url("/images/img-locations-background.webp");
  display: flex;
  justify-content: center;
  align-items: center;
}

.location-address {
  height: 300px;
  width: 300px;
  background-color: black;
  margin-left: 40px;
}

/*Contact Bar*/

.contact-bar {
  height: 200px;
  width: 1200px;
  margin-left: 20px;
  margin-top: 10px;
}

.company-data {
  text-align: center;
  margin-bottom: 40px;
}

.copyright {
  margin-left: 20px;
}

